# Task_Manager_API-With-Postgres-Database

./: .gitignore  README.md  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0a61a1e47d73_add_completed_and_is_active_fields.py  e7a4cccbcfaa_retrying.py
routers/: Task_Route.py
schema/: Task_Schema.py
service/: task_service.py
src/core/: logger.py
src/database/: __init__.py
src/models/: task_model.py
src/repository/: Task_repo.py  task_repository.py
src/routers/: task_routes.py
src/schema/: Task_Schema.py
src/schemas/: task_schema.py
src/service/: task_service.py
src/services/: task_service.py
utils/: Task_logger.py
